--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 --Very-pale-blue: hsl(225, 100%, 98%);
 --Desaturated-blue: hsl(224, 23%, 55%);
 --Dark-blue: hsl(223, 47%, 23%);
+--White: hsl(0, 0%, 100%);
 }
 
 * {
@@ -16,4 +17,33 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Red Hat Display", sans-serif;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: var(--Pale-blue);
+}
+
+main {
+    background-image: url(images/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* width: 90rem; */
+    width: 90rem;
+    height: 100%;
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 28.125rem;
+    height: 43.5;
+    background: red;
 }
