--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 --Desaturated-blue: hsl(224, 23%, 55%);
 --Dark-blue: hsl(223, 47%, 23%);
 --White: hsl(0, 0%, 100%);
+--hover: hsl(245, 83%, 68%);
 }
 
 * {
@@ -25,7 +26,8 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: var(--Pale-blue);
+    /* background: var(--Pale-blue); */
+    background: hsl(230, 30%, 16%);
 }
 
 main {
@@ -34,7 +36,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 90rem; */
+    justify-content: center;
     width: 90rem;
     height: 100%;
 }
@@ -45,5 +47,141 @@ article {
     align-items: center;
     width: 28.125rem;
     height: 43.5;
-    background: red;
+    background: var(--White);
+    overflow: hidden;
+    border-radius: 1.1rem;
+}
+
+.groups {
+    padding: 2rem;
+}
+
+.section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem;
+}
+
+.title {
+    font-size: 2rem;
+    font-weight: 900;
+    padding: 0.2rem;
+    color: var(--Dark-blue);
+}
+
+.desc {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-align: center;
+    line-height: 1.5rem;
+    color: var(--Desaturated-blue);
+    padding: 0.8rem 0;
+}
+
+.section.item2 {
+    padding: 1.5rem;
+    background: var(--Very-pale-blue);
+    align-items: start;
+    justify-content: center;
+    border-radius: 1rem;
+    margin: 1.2rem 0;
+}
+
+.offer, .plan {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon {
+    padding-right: 1.5rem;
+}
+
+.annual-offer {
+    padding-right: 4rem;
+}
+
+.annual-plan {
+    font-size: 1.1rem;
+    font-weight: 900;
+    padding-bottom: 0.3rem;
+    color: var(--Dark-blue);
+}
+
+.amount {
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: var(--Desaturated-blue);
+}
+
+.change {
+    font-size: 1rem;
+    font-weight: 700;
+    padding-left: 2.3rem;
+    outline: none;
+    cursor: pointer;
+    text-decoration: underline;
+    color: hsl(246, 59%, 49%);
+}
+
+.change:hover {
+    color: var(--hover);
+    text-decoration: none;
+}
+
+.section.item3 {
+    width: 100%;
+    gap: 0.5rem;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.btn {
+    outline: none;
+    border: none;
+    width: 100%;
+    height: 3.2rem;
+    border-radius: 0.6rem;
+    cursor: pointer;
+}
+
+.btn1 {
+    background: var(--Bright-blue);
+    color: var(--White);
+    font-size: 1rem;
+    font-weight: 700;
+    box-shadow: 0 5px 30px  hsl(247, 72%, 79%);
+}
+
+.btn1:hover {
+    background: var(--hover);
+}
+
+.btn2 {
+    font-size: 1rem;
+    font-weight: 900;
+    color: var(--Desaturated-blue);
+    background: transparent;
+}
+
+.btn2:hover{
+    color: var(--Dark-blue);
+    font-weight: 900;
+}
+
+
+@media screen and (max-width: 48rem) {
+    main {
+    background-image: url(images/pattern-background-mobile.svg);
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90rem;
+    /* height: 100%; */
+}
+
 }
