--- a/style.css
+++ b/style.css
@@ -26,13 +26,14 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    /* background: var(--Pale-blue); */
-    background: hsl(230, 30%, 16%);
+    background: var(--Pale-blue);
+    background: var(--Dark-blue);
 }
 
 main {
     background-image: url(images/pattern-background-desktop.svg);
     background-repeat: no-repeat;
+    background-position-x: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,6 +51,8 @@ article {
     background: var(--White);
     overflow: hidden;
     border-radius: 1.1rem;
+    box-shadow: 0 5px 30px  hsl(247, 72%, 79%);
+
 }
 
 .groups {
@@ -173,15 +176,72 @@ article {
 
 
 @media screen and (max-width: 48rem) {
-    main {
-    background-image: url(images/pattern-background-mobile.svg);
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 90rem;
-    /* height: 100%; */
-}
+
+    body {
+        justify-content: start;
+        height: 80vh;
+    }
+        main {
+        padding-top: 2rem;
+        background-image: url(images/pattern-background-mobile.svg);
+        background-size:contain;
+        height: 90rem;
+        width: 40rem;
+    }
+
+    article {
+        width: 20rem;
+        height: 35.5rem;
+    }
+
+    .title-image{
+        max-width: 20rem;
+    }
+
+    .groups {
+        width: 17rem;
+        padding: 0;
+    }
+
+    .title {
+        font-size: 1.4rem;
+    }
+
+    .desc {
+        font-size: 0.9rem;
+    }
+
+    .section.item2 {
+        padding: 1.2rem 0.5rem;
+        margin: 0;
+    }
+
+    .icon {
+        padding-right: 1rem;
+    }
+
+    .annual-offer {
+        padding-right: 2rem;
+    }
+
+    .annual-plan {
+        font-size: 0.8rem;
+        padding-bottom: 0.3rem;
+    }
+
+    .amount {
+        font-size: 0.8rem;
+        color: var(--Desaturated-blue);
+    }
+
+    .change {
+        font-size: 0.8rem;
+        padding-left: 1.5rem;
+    }
+
+    .section.item3 {
+        gap: 1rem;
+        padding: 1.5rem 0;
+    }
 
 }
