--- a/style.css
+++ b/style.css
@@ -190,34 +190,36 @@ article {
     }
 
     article {
-        width: 20rem;
-        height: 35.5rem;
+        width: 28rem;
+        height: 50.5rem;
     }
 
     .title-image{
-        max-width: 20rem;
+        max-width: 28rem;
     }
 
     .groups {
-        width: 17rem;
-        padding: 0;
+        padding: 0 2rem;
     }
 
     .title {
-        font-size: 1.4rem;
+        font-size: 2rem;
+        padding: 1.5rem 0;
     }
 
     .desc {
-        font-size: 0.9rem;
+        font-size: 1.35rem;
+        padding: 1rem 0.1rem;
     }
 
     .section.item2 {
-        padding: 1.2rem 0.5rem;
-        margin: 0;
+        padding: 1.5rem 0.5rem;
+        margin: 1.6rem 0;
     }
 
     .icon {
         padding-right: 1rem;
+        height: 4rem;
     }
 
     .annual-offer {
@@ -225,23 +227,27 @@ article {
     }
 
     .annual-plan {
-        font-size: 0.8rem;
+        font-size: 1.4rem;
         padding-bottom: 0.3rem;
     }
 
     .amount {
-        font-size: 0.8rem;
+        font-size: 1.4rem;
         color: var(--Desaturated-blue);
     }
 
     .change {
-        font-size: 0.8rem;
-        padding-left: 1.5rem;
+        font-size: 1.4rem;
+        padding-left: 2rem;
     }
 
     .section.item3 {
         gap: 1rem;
         padding: 1.5rem 0;
+    }
+
+    .btn {
+        height: 4.2rem;
     }
 
 }
