Fix height unit for article element in CSS

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ article {
     flex-direction: column;
     align-items: center;
     width: 28.125rem;
-    height: 43.5;
+    height: 43.5rem;
     background: var(--White);
     overflow: hidden;
     border-radius: 1.1rem;
