--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@
 --Dark-blue: hsl(223, 47%, 23%);
 --White: hsl(0, 0%, 100%);
 --hover: hsl(245, 83%, 68%);
+
+--shadow: 0 5px 30px  hsl(247, 72%, 79%);
 }
 
 * {
-    margin: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Red Hat Display", sans-serif;
@@ -50,7 +51,7 @@ article {
     background: var(--White);
     overflow: hidden;
     border-radius: 1.1rem;
-    box-shadow: 0 5px 30px  hsl(247, 72%, 79%);
+    box-shadow: var(--shadow);
 
 }
 
@@ -154,7 +155,7 @@ article {
     color: var(--White);
     font-size: 1rem;
     font-weight: 700;
-    box-shadow: 0 5px 30px  hsl(247, 72%, 79%);
+    box-shadow: var(--shadow);
 }
 
 .btn1:hover {
